Minor changes [WIP]

--- a/index.html
+++ b/index.html
@@ -1,202 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Aleksandr Vorontsov</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 800|Roboto:300" rel="stylesheet">
-        <link rel="stylesheet" href="css/stylesheet.css">
-        <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-        <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="js/javascript.js"></script>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-101741070-1', 'auto');
-            ga('send', 'pageview');
-        </script>
-    </head>
-    <body>
-        <header class="pageTop">
-            <h1 class="headerName">Aleksandr Vorontsov</h1>
-            <aside class="headerMisc">Aspiring Web and Software Developer</aside>
-            <nav class="navigation">
-                <ul class="menu">
-                    <li class="menuItem">
-                        <a class="navLink" href="#about" id="aboutLink">
-                            <span>
-                                About
-                            </span>
-                        </a>
-                    </li>
-                    <li class="menuItem">
-                        <a class="navLink" href="#skills" id="skillsLink">
-                            <span>
-                                Skills
-                            </span>
-                        </a>
-                    </li>
-                    <li class="menuItem">
-                        <a class="navLink" href="#work" id="WorkLink">
-                            <span>
-                                Work
-                            </span>
-                        </a>
-                    </li>
-                    <li class="menuItem">
-                        <a class="navLink" href="#projects" id="projectsLink">
-                            <span>
-                                Projects
-                            </span>
-                        </a>
-                    </li>
-                    <li class="menuItem">
-                        <a class="navLink" href="#contact" id="contactLink">
-                            <span>
-                                Contact
-                            </span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div class="mainBody">
-            <div class="bodyHeader" id="bodyHeader">
-                <h2 class="bodyTitle scrollTop" id="about">About</h2>
-                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-            </div>
-            <div class="bodyText">
-                <p>
-                    Hello, I'm a web and software developer and student in London, UK.
-                </p>
-                <p>
-                    I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. Also, I attend hackathons as a casual interest and to develop common web development skills.
-                </p>
-                <p>
-                    If you're a recruiter or want to see more information, have a look at my <a class="webLink" href="Aleksandr%20Vorontsov%20-%20Resume.pdf"><b>CV.</b></a>
-                </p>
-            </div>
-            <div class="bodyHeader" id="skillsHeader">
-                <h2 class="bodyTitle scrollTop" id="skills">Skills</h2>
-                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-            </div>
-            <div class="bodyText" id="skillsText">
-                <div class="skills">
-                    <ul class="skillsList">
-                        <li class="skillsItem">HTML5 + CSS3</li>
-                        <li class="skillsItem">JavaScript</li>
-                        <li class="skillsItem">C#</li>
-                        <li class="skillsItem">Python</li>
-                        <li class="skillsItem">AngularJS</li>
-                        <li class="skillsItem">React/React Native</li>
-                        <li class="skillsItem">PHP/Laravel</li>
-                        <li class="skillsItem">Git</li>
-                        <li class="skillsItem">JetBrains IDEs</li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <ul class="skillsList">
-                        <li class="skillsItem"><b>Experienced</b></li>
-                        <li class="skillsItem"><b>Moderate</b></li>
-                        <li class="skillsItem"><b>Experienced</b></li>
-                        <li class="skillsItem"><b>Experienced</b></li>
-                        <li class="skillsItem"><b>Beginner</b></li>
-                        <li class="skillsItem"><b>Beginner</b></li>
-                        <li class="skillsItem"><b>Beginner</b></li>
-                        <li class="skillsItem"><b>Experienced</b></li>
-                        <li class="skillsItem"><b>Experienced</b></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="bodyHeader" id="workHeader">
-                <h2 class="bodyTitle scrollTop" id="work">Work</h2>
-                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-            </div>
-            <div class="bodyText" id="workText">
-                <div class="work">
-                    <ul class="workList">
-                        <li class="workItem">
-                            <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
-                            <aside class="workMisc">(July 2017 - August 2017)</aside>
-                            <aside class="workMisc">Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.</aside>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="bodyHeader" id="projectsHeader">
-                <h2 class="bodyTitle scrollTop" id="projects">Projects</h2>
-                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-            </div>
-            <div class="bodyText" id="projectsList">
-                <div class="projectsItem">
-                    <a class="webLink" href="https://github.com/a-vorontsov/Particle">
-                        <h2 class="projectHeader">
-                            Particle
-                        </h2>
-                    </a>
-                    <p class="projectBody">
-                        Particle is a 2D platformer game created in Unity and scripted in C#. It was made as part of the BAFTA YGD 2017 competition
-                    </p>
-                </div>
-                <div class="projectsItem">
-                    <a class="webLink" href="https://github.com/a-vorontsov/GoLink">
-                        <h2 class="projectHeader">
-                            GoLink
-                        </h2>
-                    </a>
-                    <p class="projectBody">
-                        GoLink is a proximity based messaging service. It is built using an AngularJS front-end connected to a Firebase cloud database.</p>
-                </div>
-                <div class="projectsItem">
-                    <a class="webLink" href="https://github.com/kz/Beacon">
-                        <h2 class="projectHeader">
-                            Beacon
-                        </h2>
-                    </a>
-                    <p class="projectBody">
-                        Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.
-                    </p>
-                </div>
-                <div class="projectsItem">
-                    <a class="webLink" href="https://github.com/kz/flook">
-                        <h2 class="projectHeader">
-                            Flook
-                        </h2>
-                    </a>
-                    <p class="projectBody">
-                        Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.
-                    </p>
-                </div>
-            </div>
-            <div class="bodyHeader" id="miscHeader">
-                <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
-                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-            </div>
-            <div class="miscText">
-                <ul class="contactList">
-                    <li class="contactItem">
-                        <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
-                    </li>
-                    <li class="contactItem">
-                        <a class="webLink" href="https://www.linkedin.com/in/aleksvorontsov/">LinkedIn</a>
-                    </li>
-                    <li class="contactItem">
-                        <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">Facebook</a>
-                    </li>
-                    <li class="contactItem">
-                        <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <footer>
-            <span class="footerText">
-                Designed and Developed by Aleksandr Vorontsov
+
+<head>
+  <meta charset="UTF-8">
+  <title>Aleksandr Vorontsov</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 800|Roboto:300" rel="stylesheet">
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/javascript.js"></script>
+  <script>
+  ( function( i, s, o, g, r, a, m ) {
+    i[ 'GoogleAnalyticsObject' ] = r;
+    i[ r ] = i[ r ] || function() {
+      ( i[ r ].q = i[ r ].q || [] ).push( arguments )
+    }, i[ r ].l = 1 * new Date();
+    a = s.createElement( o ),
+      m = s.getElementsByTagName( o )[ 0 ];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore( a, m )
+  } )( window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga' );
+  ga( 'create', 'UA-101741070-1', 'auto' );
+  ga( 'send', 'pageview' );
+  </script>
+</head>
+
+<body>
+  <header class="pageTop">
+    <h1 class="headerName">Aleksandr Vorontsov</h1>
+    <aside class="headerMisc">Aspiring Web and Software Developer</aside>
+    <nav class="navigation">
+      <ul class="menu">
+        <li class="menuItem">
+          <a class="navLink" href="#about" id="aboutLink">
+            <span>
+              About
             </span>
-        </footer>
-    </body>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a class="navLink" href="#skills" id="skillsLink">
+            <span>
+              Skills
+            </span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a class="navLink" href="#work" id="WorkLink">
+            <span>
+              Work
+            </span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a class="navLink" href="#projects" id="projectsLink">
+            <span>
+              Projects
+            </span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a class="navLink" href="#contact" id="contactLink">
+            <span>
+              Contact
+            </span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <div class="mainBody">
+    <div class="bodyHeader" id="bodyHeader">
+      <h2 class="bodyTitle scrollTop" id="about">About</h2>
+      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    </div>
+    <div class="bodyText">
+      <p>
+        Hello, I'm a web and software developer and student in London, UK.
+      </p>
+      <p>
+        I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. Also, I attend hackathons as a casual interest and to develop common web development skills.
+      </p>
+      <p>
+        If you're a recruiter or want to see more information, have a look at my <a class="webLink" href="Aleksandr%20Vorontsov%20-%20Resume.pdf"><b>CV.</b></a>
+      </p>
+    </div>
+    <div class="bodyHeader" id="skillsHeader">
+      <h2 class="bodyTitle scrollTop" id="skills">Skills</h2>
+      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    </div>
+    <div class="bodyText" id="skillsText">
+      <div class="skills">
+        <ul class="skillsList">
+          <li class="skillsItem">HTML5 + CSS3</li>
+          <li class="skillsItem">JavaScript</li>
+          <li class="skillsItem">C#</li>
+          <li class="skillsItem">Python</li>
+          <li class="skillsItem">AngularJS</li>
+          <li class="skillsItem">React</li>
+          <li class="skillsItem">PHP/Laravel</li>
+          <li class="skillsItem">Git</li>
+          <li class="skillsItem">JetBrains IDEs</li>
+        </ul>
+      </div>
+      <div class="skills">
+        <ul class="skillsList">
+          <li class="skillsItem"><b>Experienced</b></li>
+          <li class="skillsItem"><b>Moderate</b></li>
+          <li class="skillsItem"><b>Moderate</b></li>
+          <li class="skillsItem"><b>Moderate</b></li>
+          <li class="skillsItem"><b>Beginner</b></li>
+          <li class="skillsItem"><b>Moderate</b></li>
+          <li class="skillsItem"><b>Beginner</b></li>
+          <li class="skillsItem"><b>Experienced</b></li>
+          <li class="skillsItem"><b>Experienced</b></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bodyHeader" id="workHeader">
+      <h2 class="bodyTitle scrollTop" id="work">Work</h2>
+      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    </div>
+    <div class="bodyText" id="workText">
+      <div class="work">
+        <ul class="workList">
+          <li class="workItem">
+            <a href="https://www.perfocal.com" class="webLink"><b style="font-size: 22px;">Perfocal</b></a> - Junior Developer
+            <aside class="workMisc">(October 2017 - Present)</aside>
+            <aside class="workMisc">
+              - Built and implements various designs
+            </aside>
+          </li>
+          <li class="workItem">
+            <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
+            <aside class="workMisc">(July 2017 - August 2017)</aside>
+            <aside class="workMisc">
+              Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.
+            </aside>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="bodyHeader" id="projectsHeader">
+      <h2 class="bodyTitle scrollTop" id="projects">Projects</h2>
+      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    </div>
+    <div class="bodyText" id="projectsList">
+      <div class="projectsItem">
+        <a class="webLink" href="https://github.com/StefLianos/Hackings-4.0">
+          <h2 class="projectHeader">
+            RockPaperSplat
+          </h2>
+        </a>
+        <p class="projectBody">
+          RockPaperSplat is a battle platformer inspired by Rock Paper Scissors and games such as Super Smash Bros. It won 2nd place overall at HackKing's-4.0 as well as the AWS prize and .tech domain prize. I am in charge of building and maintaining the <a class="webLink" href="https://rockpapersplat.tech/">website</a> and various web services.
+        </p>
+      </div>
+      <div class="projectsItem">
+        <a class="webLink" href="https://github.com/a-vorontsov/Particle">
+          <h2 class="projectHeader">
+            Particle
+          </h2>
+        </a>
+        <p class="projectBody">
+          Particle is a 2D platformer game focussed on speed. It was created in Unity and scripted in C#. It was made as part of the BAFTA YGD 2017 competition
+        </p>
+      </div>
+      <div class="projectsItem">
+        <a class="webLink" href="https://github.com/a-vorontsov/GoLink">
+          <h2 class="projectHeader">
+            GoLink
+          </h2>
+        </a>
+        <p class="projectBody">
+          GoLink is a proximity based messaging service. It is built using an AngularJS front-end connected to a Firebase cloud database.
+        </p>
+      </div>
+      <div class="projectsItem">
+        <a class="webLink" href="https://github.com/kz/Beacon">
+          <h2 class="projectHeader">
+            Beacon
+          </h2>
+        </a>
+        <p class="projectBody">
+          Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.
+        </p>
+      </div>
+      <div class="projectsItem">
+        <a class="webLink" href="https://github.com/kz/flook">
+          <h2 class="projectHeader">
+            Flook
+          </h2>
+        </a>
+        <p class="projectBody">
+          Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.
+        </p>
+      </div>
+    </div>
+    <div class="bodyHeader" id="miscHeader">
+      <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
+      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    </div>
+    <div class="miscText">
+      <ul class="contactList">
+        <li class="contactItem">
+          <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
+        </li>
+        <li class="contactItem">
+          <a class="webLink" href="https://www.linkedin.com/in/aleksvorontsov/">LinkedIn</a>
+        </li>
+        <li class="contactItem">
+          <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">Facebook</a>
+        </li>
+        <li class="contactItem">
+          <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <footer>
+    <span class="footerText">
+      Designed and Developed by Aleksandr Vorontsov
+    </span>
+  </footer>
+</body>
+
 </html>
