Update work desc [WIP]

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="bodyText">
       <p>
-        Hello, I'm a web and software developer and student in London, UK.
+        Hello, I'm a web and software developer and student at King's College London in London, UK.
       </p>
       <p>
         I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. Also, I attend hackathons as a casual interest and to develop common web development skills.
@@ -104,7 +104,6 @@
           <li class="skillsItem">React</li>
           <li class="skillsItem">PHP/Laravel</li>
           <li class="skillsItem">Git</li>
-          <li class="skillsItem">JetBrains IDEs</li>
         </ul>
       </div>
       <div class="skills">
@@ -116,7 +115,6 @@
           <li class="skillsItem"><b>Beginner</b></li>
           <li class="skillsItem"><b>Moderate</b></li>
           <li class="skillsItem"><b>Beginner</b></li>
-          <li class="skillsItem"><b>Experienced</b></li>
           <li class="skillsItem"><b>Experienced</b></li>
         </ul>
       </div>
@@ -132,7 +130,9 @@
             <a href="https://www.perfocal.com" class="webLink"><b style="font-size: 22px;">Perfocal</b></a> - Junior Developer
             <aside class="workMisc">(October 2017 - Present)</aside>
             <aside class="workMisc">
-              - Built and implements various designs
+              - Implemented designs for photographer sign up, dashboard and customer booking page.
+              <br/>
+              - Implemented compression system for photographer avatar and sample photos to reduce size by up to 90% depending on image size and usage.
             </aside>
           </li>
           <li class="workItem">
