--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Aleksandr Vorontsov</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 800|Roboto:300" rel="stylesheet">
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/javascript.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.css" media="all"/>
+  <link rel="stylesheet" href="css/stylesheet.css" media="all"/>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png" media="all"/>
   <script>
   ( function( i, s, o, g, r, a, m ) {
     i[ 'GoogleAnalyticsObject' ] = r;
@@ -30,203 +29,211 @@
 </head>
 
 <body>
-  <header class="pageTop">
-    <h1 class="headerName">Aleksandr Vorontsov</h1>
-    <aside class="headerMisc">Aspiring Web and Software Developer</aside>
-    <nav class="navigation">
-      <ul class="menu">
-        <li class="menuItem">
-          <a class="navLink" href="#about" id="aboutLink">
-            <span>
-              About
-            </span>
-          </a>
-        </li>
-        <li class="menuItem">
-          <a class="navLink" href="#skills" id="skillsLink">
-            <span>
-              Skills
-            </span>
-          </a>
-        </li>
-        <li class="menuItem">
-          <a class="navLink" href="#work" id="WorkLink">
-            <span>
-              Work
-            </span>
-          </a>
-        </li>
-        <li class="menuItem">
-          <a class="navLink" href="#projects" id="projectsLink">
-            <span>
-              Projects
-            </span>
-          </a>
-        </li>
-        <li class="menuItem">
-          <a class="navLink" href="#contact" id="contactLink">
-            <span>
-              Contact
-            </span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <div class="mainBody">
-    <div class="bodyHeader" id="bodyHeader">
-      <h2 class="bodyTitle scrollTop" id="about">About</h2>
-      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-    </div>
-    <div class="bodyText">
-      <p>
-        Hello, I'm a web and software developer and student at King's College London in London, UK.
-      </p>
-      <p>
-        I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. Also, I attend hackathons as a casual interest and to develop common web development skills.
-      </p>
-      <p>
-        If you're a recruiter or want to see more information, have a look at my <a class="webLink" href="Aleksandr%20Vorontsov%20-%20Resume.pdf"><b>CV.</b></a>
-      </p>
-    </div>
-    <div class="bodyHeader" id="skillsHeader">
-      <h2 class="bodyTitle scrollTop" id="skills">Skills</h2>
-      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-    </div>
-    <div class="bodyText" id="skillsText">
-      <div class="skills">
-        <ul class="skillsList">
-          <li class="skillsItem">HTML5 + CSS3</li>
-          <li class="skillsItem">JavaScript</li>
-          <li class="skillsItem">C#</li>
-          <li class="skillsItem">Python</li>
-          <li class="skillsItem">AngularJS</li>
-          <li class="skillsItem">React</li>
-          <li class="skillsItem">PHP/Laravel</li>
-          <li class="skillsItem">Git</li>
-        </ul>
-      </div>
-      <div class="skills">
-        <ul class="skillsList">
-          <li class="skillsItem"><b>Experienced</b></li>
-          <li class="skillsItem"><b>Moderate</b></li>
-          <li class="skillsItem"><b>Moderate</b></li>
-          <li class="skillsItem"><b>Moderate</b></li>
-          <li class="skillsItem"><b>Beginner</b></li>
-          <li class="skillsItem"><b>Moderate</b></li>
-          <li class="skillsItem"><b>Beginner</b></li>
-          <li class="skillsItem"><b>Experienced</b></li>
-        </ul>
+  <div id="fullpage">
+    <div class="section active header text-center" id="section0">
+      <div class="center">
+        <h1>Aleksandr Vorontsov</h1>
+        <h3>Student at King's College London<br/>Web Developer</h3>
       </div>
     </div>
-    <div class="bodyHeader" id="workHeader">
-      <h2 class="bodyTitle scrollTop" id="work">Work</h2>
-      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-    </div>
-    <div class="bodyText" id="workText">
-      <div class="work">
-        <ul class="workList">
-          <li class="workItem">
-            <a href="https://www.perfocal.com" class="webLink"><b style="font-size: 22px;">Perfocal</b></a> - Junior Developer
-            <aside class="workMisc">(October 2017 - Present)</aside>
-            <aside class="workMisc">
-              - Implemented designs for photographer sign up, dashboard and customer booking page.
-              <br/>
-              - Implemented compression system for photographer avatar and sample photos to reduce size by up to 90% depending on image size and usage.
-            </aside>
-          </li>
-          <li class="workItem">
-            <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
-            <aside class="workMisc">(July 2017 - August 2017)</aside>
-            <aside class="workMisc">
-              Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.
-            </aside>
-          </li>
-        </ul>
+    <div class="section body" id="section1">
+      <div class="center">
+        <h1>Me</h1>
+        <div class="p--64">
+          <p class="about">
+            I am an aspiring <b>web/software developer</b> and <b>MSci Computer Science student</b> at King's College London.
+            <br/>
+            <br/>
+            I enjoy taking part in hackathons and experimenting with new technologies.
+            <br/>
+            <br/>
+            Outside of programming, I am interested in mechanical keyboards and sneakers and rhythm games. I also play the piano and have a broad taste in music.
+          </p>
+        </div>
+        <br/>
+        <div class="p--64">
+          <h2>Tools + Software</h2>
+          <p class="about">
+            More Experienced: <b>React, JS, HTML5, CSS3, Git, SQL</b>
+            <br/>
+            <br/>
+            Less Experienced: <b>C#, Python, PHP/Laravel, Angular</b>
+          </p>
+        </div>
       </div>
     </div>
-    <div class="bodyHeader" id="projectsHeader">
-      <h2 class="bodyTitle scrollTop" id="projects">Projects</h2>
-      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+    <div class="section body" id="section2">
+      <h1>Experience</h1>
+      <div class="slide">
+        <div class="p--64">
+          <h2>Perfocal</h2>
+          <div class="scrollable-element">
+            <aside>June 2018 - September 2018</aside>
+            <ul>
+              <li>
+                <b>Took over role as lead developer.</b>
+              </li>
+              <li>
+                Wrote technical documentation for codebase and features.
+              </li>
+              <li>
+                Set up custom static page templating solution for use in generating static landing pages with more efficiency.
+              </li>
+              <li>
+                Developed time-slot booking infrastructure and platform for pop-up photo sessions.
+              </li>
+            </ul>
+            <aside>February 2018 - May 2018</aside>
+            <ul>
+              <li>
+                <b>Designed and implemented minor server-side and major client-side features for photographer and customer pages.</b>
+              </li>
+              <li>
+                Set up daily reminder jobs to send to photographers and customers.
+              </li>
+            </ul>
+            <aside>October 2017 - January 2018</aside>
+            <ul>
+              <li>
+                Aided in design and implementation of various small-scale features and page across photographer and customer platforms.
+              </li>
+              <li>
+                <b>Managed testing of new and existing features prior to deployment.</b>
+              </li>
+              <li>
+                Built email templates from specified designs.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="p--64">
+          <h2>Endorsify</h2>
+          <div class="scrollable-element">
+            <aside>July 2017 - August 2017</aside>
+            <ul>
+              <li>
+                Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.
+              </li>
+              <li>
+                Introduced to waterfall development cycle as well as different PHP technologies.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="bodyText" id="projectsList">
-      <div class="projectsItem">
-        <a class="webLink" href="https://github.com/StefLianos/Hackings-4.0">
-          <h2 class="projectHeader">
-            RockPaperSplat
-          </h2>
-        </a>
-        <p class="projectBody">
-          RockPaperSplat is a battle platformer inspired by Rock Paper Scissors and games such as Super Smash Bros. It won 2nd place overall at HackKing's-4.0 as well as the AWS prize and .tech domain prize. I am in charge of building and maintaining the <a class="webLink" href="https://rockpapersplat.tech/">website</a> and various web services.
-        </p>
+    <div class="section body" id="section3">
+      <h1>Projects</h1>
+      <div class="slide">
+        <div class="p--64">
+          <h2><a href="https://rockpapersplat.tech/" target="_blank">RockPaperSplat!</a></h2>
+          <div class="scrollable-element">
+            <div>
+              <div class="project-images-spaced">
+                <div>
+                  <img class="project-image" src="./images/rps.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/editor.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/hats2.gif"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            The website code can be found <a href="https://github.com/RockPaperSplat/RockPaperSplat-web" target="_blank">here</a>.<br/>
+            The game can be found <a href="https://github.com/StefLianos/RockPaperSplat" target="_blank">here</a>.
+          </p>
+        </div>
       </div>
-      <div class="projectsItem">
-        <a class="webLink" href="https://github.com/a-vorontsov/Particle">
-          <h2 class="projectHeader">
-            Particle
-          </h2>
-        </a>
-        <p class="projectBody">
-          Particle is a 2D platformer game focussed on speed. It was created in Unity and scripted in C#. It was made as part of the BAFTA YGD 2017 competition
-        </p>
+      <div class="slide">
+        <div class="p--64">
+          <h2><a href="https://ichack.vorontsov.co.uk/" target="_blank">Shirt or Not-Shirt</a></h2>
+          <div class="scrollable-element">
+            <div>
+              <div class="project-images-spaced">
+                <div>
+                  <img class="project-image" src="./images/shirt-no-shirt.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/shirt.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/not-shirt.png"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            The project code can be found <a href="https://github.com/a-vorontsov/Shirt-or-not-shirt" target="_blank">here</a>.
+          </p>
+        </div>
       </div>
-      <div class="projectsItem">
-        <a class="webLink" href="https://github.com/a-vorontsov/GoLink">
-          <h2 class="projectHeader">
-            GoLink
-          </h2>
-        </a>
-        <p class="projectBody">
-          GoLink is a proximity based messaging service. It is built using an AngularJS front-end connected to a Firebase cloud database.
-        </p>
+      <div class="slide">
+        <div class="p--64">
+          <h2><a href="https://filmspottr.vorontsov.co.uk/" target="_blank">FilmSpottr</a></h2>
+          <div class="scrollable-element">
+            <div>
+              <div class="project-images-spaced">
+                <div>
+                  <img class="project-image" src="./images/filmspottr1.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/filmspottr2.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/filmspottr3.png"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            The project code can be found <a href="https://github.com/a-vorontsov/FilmSpottr" target="_blank">here</a>.
+          </p>
+        </div>
       </div>
-      <div class="projectsItem">
-        <a class="webLink" href="https://github.com/kz/Beacon">
-          <h2 class="projectHeader">
-            Beacon
-          </h2>
-        </a>
-        <p class="projectBody">
-          Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.
-        </p>
-      </div>
-      <div class="projectsItem">
-        <a class="webLink" href="https://github.com/kz/flook">
-          <h2 class="projectHeader">
-            Flook
-          </h2>
-        </a>
-        <p class="projectBody">
-          Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.
-        </p>
+      <div class="slide">
+        <div class="p--64">
+          <h2>Particle</h2>
+          <div class="scrollable-element">
+            <div>
+              <div class="project-images-spaced">
+                <div>
+                  <img class="project-image" src="./images/shirt-no-shirt.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/shirt.png"/>
+                </div>
+                <div>
+                  <img class="project-image" src="./images/not-shirt.png"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p>
+            The project code can be found <a href="https://github.com/a-vorontsov/Particle" target="_blank">here</a>.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="bodyHeader" id="miscHeader">
-      <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
-      <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
-    </div>
-    <div class="miscText">
-      <ul class="contactList">
-        <li class="contactItem">
-          <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
-        </li>
-        <li class="contactItem">
-          <a class="webLink" href="https://www.linkedin.com/in/aleksvorontsov/">LinkedIn</a>
-        </li>
-        <li class="contactItem">
-          <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">Facebook</a>
-        </li>
-        <li class="contactItem">
-          <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
-        </li>
-      </ul>
+    <div class="section body text-center" id="section5">
+      <div class="center">
+        <h1>Contact Me</h1>
+        <div class="nav-link"><span><a href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a></span></div>
+        <div class="nav-link"><span><a target="_blank" href="https://www.facebook.com/sasha.vorontsov">Facebook</a></span></div>
+        <div class="nav-link"><span><a target="_blank" href="https://www.linkedin.com/aleksvorontsov">LinkedIn</a></span></div>
+        <div class="nav-link"><span><a target="_blank" href="https://www.github.com/a-vorontsov">Github</a></span></div>
+        <div class="nav-link"><span><a target="_blank" href="https://www.twitter.com/avorontsov98">Twitter</a></span></div>
+      </div>
     </div>
   </div>
-  <footer>
-    <span class="footerText">
-      Designed and Developed by Aleksandr Vorontsov
-    </span>
-  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.extensions.min.js"></script>
+  <script src="js/javascript.js"></script>
 </body>
 
 </html>
