Update meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Aleksandr Vorontsov</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software"/>
+  <meta property="og:title" content="Aleksandr Vorontsov"/>
+  <meta property="og:description" content="Student at King's College London"/>
+  <meta property="og:image" content="https://vorontsov.co.uk/images/favicon.png"/>
+  <meta property="og:url" content="https://vorontsov.co.uk/"/>
+  <meta name="twitter:title" content="Aleksandr Vorontsov"/>
+  <meta name="twitter:description" content="Student at King's College London"/>
+  <meta name="twitter:image" content="https://vorontsov.co.uk/images/favicon.png"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.css" media="all"/>
