Update theme color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Aleksandr Vorontsov"/>
   <meta name="twitter:description" content="Student at King's College London"/>
   <meta name="twitter:image" content="https://vorontsov.co.uk/images/favicon.png"/>
-  <meta name="theme-color" content="#7367F0"/>
+  <meta name="theme-color" content="#CE9FFC"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.css" media="all"/>
