Update sharing images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software"/>
   <meta property="og:title" content="Aleksandr Vorontsov"/>
   <meta property="og:description" content="Student at King's College London"/>
-  <meta property="og:image" content="https://vorontsov.co.uk/images/favicon.png"/>
+  <meta property="og:image" content="https://vorontsov.co.uk/images/AV-s.png"/>
   <meta property="og:url" content="https://vorontsov.co.uk/"/>
   <meta name="twitter:title" content="Aleksandr Vorontsov"/>
   <meta name="twitter:description" content="Student at King's College London"/>
-  <meta name="twitter:image" content="https://vorontsov.co.uk/images/favicon.png"/>
+  <meta name="twitter:image" content="https://vorontsov.co.uk/images/AV-s.png"/>
   <meta name="theme-color" content="#CE9FFC"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
