Add education section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,27 @@
       </div>
     </div>
     <div class="section body" id="section3">
+      <h1>Education</h1>
+      <div class="p--64">
+        <h2>Computer Science MSci - King's College London</h2>
+        <aside>2018 - 2022</aside>
+        <br/>
+        <p>
+          <b>Currently Enrolled</b>
+        </p>
+        <hr/>
+        <h2>Whitgift School</h2>
+        <aside>2010 - 2017</aside>
+        <br/>
+        <p>
+          <b>A-Level</b> 2 A, 2 B
+        </p>
+        <p>
+          <b>GCSE</b> 3 A*, 5 A, 3 B          
+        </p>
+      </div>
+    </div>
+    <div class="section body" id="section4">
       <h1>Projects</h1>
       <div class="slide">
         <div class="p--64">
@@ -234,7 +255,7 @@
         <h1>Contact Me</h1>
         <div class="nav-link"><span><a href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a></span></div>
         <div class="nav-link"><span><a target="_blank" href="https://www.facebook.com/sasha.vorontsov">Facebook</a></span></div>
-        <div class="nav-link"><span><a target="_blank" href="https://www.linkedin.com/aleksvorontsov">LinkedIn</a></span></div>
+        <div class="nav-link"><span><a target="_blank" href="https://www.linkedin.com/in/aleksvorontsov">LinkedIn</a></span></div>
         <div class="nav-link"><span><a target="_blank" href="https://www.github.com/a-vorontsov">Github</a></span></div>
         <div class="nav-link"><span><a target="_blank" href="https://www.twitter.com/avorontsov98">Twitter</a></span></div>
       </div>
