--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h1>Experience</h1>
       <div class="slide">
         <div class="p--64">
-          <h2>Perfocal</h2>
+          <h2><a href="https://www.perfocal.com/" target="_blank">Perfocal</a></h2>
           <div class="scrollable-element">
             <aside>June 2018 - September 2018</aside>
             <ul>
@@ -118,7 +118,7 @@
       </div>
       <div class="slide">
         <div class="p--64">
-          <h2>Endorsify</h2>
+          <h2><a href="https://endorsify.co/" target="_blank">Endorsify</a></h2>
           <div class="scrollable-element">
             <aside>July 2017 - August 2017</aside>
             <ul>
@@ -220,7 +220,7 @@
           </p>
         </div>
       </div>
-      <div class="slide">
+      <!-- <div class="slide">
         <div class="p--64">
           <h2>Particle</h2>
           <div class="scrollable-element">
@@ -240,7 +240,7 @@
             The project code can be found <a href="https://github.com/a-vorontsov/Particle" target="_blank">here</a>.
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="section body text-center" id="section5">
       <div class="center">
