Update CV, remove endorsify from jobs

--- a/index.html
+++ b/index.html
@@ -63,73 +63,58 @@
         <div class="p--64">
           <h2>Tools + Software</h2>
           <p class="about">
-            More Experienced: <b>React, JS, HTML5, CSS3, Git, SQL</b>
+            More Experienced: <b>React, JavaScript, HTML5, CSS3, Git, SQL</b>
             <br/>
             <br/>
-            Less Experienced: <b>C#, Python, PHP/Laravel, Angular</b>
+            Less Experienced: <b>C#, Python, PHP/Laravel, Angular, Java</b>
+          </p>
+          <p class="about">
+            If you're a recruiter, please take a look at my <a href="https://vorontsov.co.uk/Aleksandr%20Vorontsov%20-%20CV.pdf" target="_blank">CV</a> for more information.
           </p>
         </div>
       </div>
     </div>
     <div class="section body" id="section2">
       <h1>Experience</h1>
-      <div class="slide">
-        <div class="p--64">
-          <h2><a href="https://www.perfocal.com/" target="_blank">Perfocal</a></h2>
-          <div class="scrollable-element">
-            <aside>June 2018 - September 2018</aside>
-            <ul>
-              <li>
-                <b>Took over role as lead developer.</b>
-              </li>
-              <li>
-                Wrote technical documentation for codebase and features.
-              </li>
-              <li>
-                Set up custom static page templating solution for use in generating static landing pages with more efficiency.
-              </li>
-              <li>
-                Developed time-slot booking infrastructure and platform for pop-up photo sessions.
-              </li>
-            </ul>
-            <aside>February 2018 - May 2018</aside>
-            <ul>
-              <li>
-                <b>Designed and implemented minor server-side and major client-side features for photographer and customer pages.</b>
-              </li>
-              <li>
-                Set up daily reminder jobs to send to photographers and customers.
-              </li>
-            </ul>
-            <aside>October 2017 - January 2018</aside>
-            <ul>
-              <li>
-                Aided in design and implementation of various small-scale features and page across photographer and customer platforms.
-              </li>
-              <li>
-                <b>Managed testing of new and existing features prior to deployment.</b>
-              </li>
-              <li>
-                Built email templates from specified designs.
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="slide">
-        <div class="p--64">
-          <h2><a href="https://endorsify.co/" target="_blank">Endorsify</a></h2>
-          <div class="scrollable-element">
-            <aside>July 2017 - August 2017</aside>
-            <ul>
-              <li>
-                Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.
-              </li>
-              <li>
-                Introduced to waterfall development cycle as well as different PHP technologies.
-              </li>
-            </ul>
-          </div>
+      <div class="p--64">
+        <h2><a href="https://www.perfocal.com/" target="_blank">Perfocal</a></h2>
+        <div class="scrollable-element">
+          <aside>June 2018 - October 2018</aside>
+          <ul>
+            <li>
+              <b>Took over role as lead developer.</b>
+            </li>
+            <li>
+              Wrote technical documentation for codebase and features.
+            </li>
+            <li>
+              Set up custom static page templating solution for use in generating static landing pages with more efficiency.
+            </li>
+            <li>
+              Developed time-slot booking infrastructure and platform for pop-up photo sessions.
+            </li>
+          </ul>
+          <aside>February 2018 - May 2018</aside>
+          <ul>
+            <li>
+              <b>Designed and implemented minor server-side and major client-side features for photographer and customer pages.</b>
+            </li>
+            <li>
+              Set up daily reminder jobs to send to photographers and customers.
+            </li>
+          </ul>
+          <aside>October 2017 - January 2018</aside>
+          <ul>
+            <li>
+              Aided in design and implementation of various small-scale features and page across photographer and customer platforms.
+            </li>
+            <li>
+              <b>Managed testing of new and existing features prior to deployment.</b>
+            </li>
+            <li>
+              Built email templates from specified designs.
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -147,10 +132,10 @@
         <aside>2010 - 2017</aside>
         <br/>
         <p>
-          <b>A-Level</b> 2 A, 2 B
+          <b>A-Level</b> 2 As, 2 Bs in Chemistry, Physics, Computer Science and Mathematics
         </p>
         <p>
-          <b>GCSE</b> 3 A*, 5 A, 3 B          
+          <b>GCSE</b> 3 A*s, 5 As, 3 Bs; A* in Biology, Chemistry and Mathematics
         </p>
       </div>
     </div>
@@ -238,6 +223,27 @@
           </div>
           <p>
             The project code can be found <a href="https://github.com/a-vorontsov/Particle" target="_blank">here</a>.
+          </p>
+        </div>
+      </div> -->
+      <!-- <div class="slide">
+        <div class="p--64">
+          <h2>GoLink</h2>
+          <div class="scrollable-element">
+            <div class="project-images-spaced">
+              <div>
+                <img class="project-image" src="./images/shirt-no-shirt.png"/>
+              </div>
+              <div>
+                <img class="project-image" src="./images/shirt.png"/>
+              </div>
+              <div>
+                <img class="project-image" src="./images/not-shirt.png"/>
+              </div>
+            </div>
+          </div>
+          <p>
+            The project code can be found <a href="https://github.com/a-vorontsov/GoLink" target="_blank">here</a>.
           </p>
         </div>
       </div> -->
