Update experience desc

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
               <b>Took over role as lead developer.</b>
             </li>
             <li>
+              Set up custom static page templating solution using Webpack, EJS and JSON for use in generating static landing pages with more efficiency, resulting in better SEO and user click-through rate.
+            </li>
+            <li>
+              Developed booking infrastructure and platform using React and NodeJS for pop-up photography sessions.
+            </li>
+            <li>
               Wrote technical documentation for codebase and features.
-            </li>
-            <li>
-              Set up custom static page templating solution for use in generating static landing pages with more efficiency.
-            </li>
-            <li>
-              Developed time-slot booking infrastructure and platform for pop-up photo sessions.
             </li>
           </ul>
           <aside>February 2018 - May 2018</aside>
@@ -100,7 +100,7 @@
               <b>Designed and implemented minor server-side and major client-side features for photographer and customer pages.</b>
             </li>
             <li>
-              Set up daily reminder jobs to send to photographers and customers.
+               Implemented an automated email and SMS digest system, improving customer-photographer communication and increasing website engagement rate.
             </li>
           </ul>
           <aside>October 2017 - January 2018</aside>
