Update CV, update experience

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <b>Took over role as lead developer.</b>
             </li>
             <li>
-              Set up custom static page templating solution using Webpack, EJS and JSON for use in generating static landing pages with more efficiency, resulting in better SEO and user click-through rate.
+              Set up custom static page templating solution using Webpack, EJS and JSON for use in generating static landing pages with more efficiency, increasing user impressions by roughly 100% within 2 months.
             </li>
             <li>
               Developed booking infrastructure and platform using React and NodeJS for pop-up photography sessions.
