--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Aleksandr Vorontsov</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software"/>
   <meta property="og:title" content="Aleksandr Vorontsov"/>
   <meta property="og:description" content="Student at King's College London"/>
@@ -15,8 +15,12 @@
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png"/>
   <meta name="theme-color" content="#CE9FFC"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css" integrity="sha384-i2PyM6FMpVnxjRPi0KW/xIS7hkeSznkllv+Hx/MtYDaHA5VcF0yL3KVlvzp8bWjQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css" integrity="sha384-ioUrHig76ITq4aEJ67dHzTvqjsAP/7IzgwE7lgJcg2r7BRNGYSK0LwSmROzYtgzs" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css" integrity="sha384-sri+NftO+0hcisDKgr287Y/1LVnInHJ1l+XC7+FOabmTTIK0HnE2ID+xxvJ21c5J" crossorigin="anonymous">
   <link rel="stylesheet" href="public/css/stylesheet.css" media="all"/>
   <link rel="shortcut icon" type="image/png" href="public/images/favicon.png" media="all"/>
   <script>
@@ -40,7 +44,7 @@
 
 <body>
   <div id="main"></div>
-  <script src="dist/index.js"></script>
+  <script type="text/javascript" src="dist/index.js"></script>
 </body>
 
 </html>
