Update 404 page head

--- a/404.html
+++ b/404.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Aleksandr Vorontsov</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software"/>
+    <meta property="og:title" content="Aleksandr Vorontsov"/>
+    <meta property="og:description" content="Student at King's College London"/>
+    <meta property="og:image" content="https://vorontsov.co.uk/public/images/AV-s.png"/>
+    <meta property="og:url" content="https://vorontsov.co.uk/"/>
+    <meta name="twitter:title" content="Aleksandr Vorontsov"/>
+    <meta name="twitter:description" content="Student at King's College London"/>
+    <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png"/>
+    <meta name="theme-color" content="#CE9FFC"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC">
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
