--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <title>Aleksandr Vorontsov</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software" />
-  <meta name="description" content="Aleksandr Vorontsov, Software Developer, KCL Student" />
+  <meta name="keywords" content="Aleksandr,Vorontsov,London,UK,Developer,Web,Software,Engineer" />
+  <meta name="description" content="Aleksandr Vorontsov, Graduate Software Engineer at Visa" />
   <meta property="og:title" content="Aleksandr Vorontsov" />
-  <meta property="og:description" content="Student at King's College London" />
+  <meta property="og:description" content="Graduate Software Engineer at Visa" />
   <meta property="og:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
   <meta property="og:url" content="https://vorontsov.co.uk/" />
   <meta name="twitter:title" content="Aleksandr Vorontsov" />
-  <meta name="twitter:description" content="Student at King's College London" />
+  <meta name="twitter:description" content="Graduate Software Engineer at Visa" />
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
   <meta name="theme-color" content="#CE9FFC" />
   <meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC">
@@ -40,7 +40,8 @@
 <body>
   <noscript>
     <h1>Aleksandr Vorontsov</h1>
-    <h2>Software Developer - Student at King's College London</h2>
+    <h2>Graduate Software Engineer at Visa</h2>
+    <p>This website looks much better with JS enabled</p>
   </noscript>
   <div id="root"></div>
 </body>
